--- a/src/App.css
+++ b/src/App.css
@@ -183,3 +183,12 @@
   background-color: black;
   color: white;
 }
+
+@media all and (max-width:450px){
+  .main-div{
+    flex-direction: column;
+  }
+  .login-box{
+    width:80vw;
+  }
+}
