--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -351,6 +351,16 @@ li{
     border-radius: 100px;
 }
 
+.loading{
+    width: 100%;
+    height:100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 @media all and (max-width:450px){
     .balance{
         margin: 10px 30px;
