--- a/src/App.css
+++ b/src/App.css
@@ -107,8 +107,8 @@
   padding: 20px;
   /* text-align: center; */
   height:80vh;
-  border-radius: 10px;
-  width:50vw;
+  border-radius: 5px;
+  width:30vw;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   background-color: #f7f7f7;
   display: flex;
@@ -122,7 +122,7 @@
 
 .login-header{
   /* background-color: red; */
-  border-bottom: 2px solid gray;
+  border-bottom: 3px solid black;
   flex:1;
   display:flex;
   justify-content: center;
@@ -141,9 +141,9 @@
 .log-field{
   height:40px;
   width:100%;
-  border-radius: 5px;
   border:none;
-  border: 1px solid #908383;
+  background-color: inherit;
+  border-bottom: 2px solid black;
   font-size: 20px;
   padding: 10px;
 }
@@ -183,6 +183,14 @@
   background-color: black;
   color: white;
 }
+.google_btn{
+  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 30px;
+}
+
 
 @media all and (max-width:450px){
   .main-div{
