--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -353,6 +353,7 @@ li{
 .loading{
     width: 100%;
     height:100%;
+    z-index: 10;
     position: absolute;
     display: flex;
     justify-content: center;
