--- a/src/v2/v2.css
+++ b/src/v2/v2.css
@@ -7,7 +7,7 @@
 .homepage-container{
     background-color: #3C91E6;
     width:100vw;;
-    height:100vh;
+    height:90vh;
 }
 
 .navbar{
@@ -314,6 +314,7 @@
     grid-template-columns: repeat(3,1fr);
     justify-content: center;
     align-items: center;
+    background-color:#f7f7f7;
 }
 
 .cross-btn{
@@ -418,6 +419,142 @@
     font-weight: 600;
     text-align: right;
     cursor: pointer;
+    position: relative;
+}
+
+.body-close{
+    display: inline;
+    position: absolute;
+    top:0;
+    right:0;
+    font-size: 28px;
+
+}
+
+.credit{
+    color: rgb(21, 185, 21);
+    display: inline-block;
+    transform: rotate(180deg);
+    padding-bottom: 2px;
+}
+
+.debit{
+    color: rgb(235, 96, 96);
+}
+
+.body-header{
+    text-align: center;
+    font-size: 30px;
+}
+
+.settings-box>.popup-body{
+    width:100%;
+    height:60vh;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.body-ele{
+    width:90%;
+}
+.body-ele>p{
+    font-weight: 600;
+    font-size: 14px;
+}
+.body-ele>input{
+    width: 50%;
+    padding: 5px;
+    font-size: 16px;
+    border:none;
+    outline: none;
+    border-bottom: 2px solid black;
+    background-color: inherit;
+}
+
+.body-ele>select{
+    padding: 5px;
+    border: none;
+    outline: none;
+    background-color: inherit;
+    width:30%;
+    border: 1px solid black;
+    font-size: 16px;
+}
+
+.popup-btn{
+    padding: 10px;
+    font-size: 16px;
+    background: none;
+    border: 2px solid black;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.2s ease-in-out;
+}
+.button-container{
+    width:70%;
+    display: flex;
+    justify-content: space-between;
+}
+.popup-btn:hover{
+    background-color: black;
+    color: white;
+}
+
+.password-box{
+    width: 30vw;
+    height: 50vh;
+    background-color: #f7f7f7;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.new-password>.popup-header{
+    font-size: 20px;
+    font-weight: 600;
+    text-align: right;
+    cursor: pointer;
+    position: relative;
+}
+
+.new-password>.popup-body{
+    width:100%;
+    height:40vh;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.popup-body>.password-body{
+    width:80%;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.password-body>.body-ele>input{
+    width:100%;
+}
+.password-body>.button-container{
+    width:100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.error{
+    color:red;
+    font-weight: 600;
 }
 
 @media all and (max-width:450px){
@@ -607,6 +744,70 @@
         justify-content: space-between;
     }
 
+    .settings-box{
+        width:90%;
+        padding: 20px 10px;
+    }
+
+    .body-header{
+        text-align: center;
+        font-size: 24px;
+    }
+
+    .body-ele>input{
+        width:80%;
+    }
+
+    .body-ele>select{
+        width:40%;
+    }
+
+    .body-close{
+        font-size: 24px;;
+    }
+
+    .button-container{
+        width:100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .popup-btn{
+        padding: 5px;
+        font-size: 14px;
+        background: none;
+        border: 2px solid black;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: 0.2s ease-in-out;
+    }
+
+    .password-box{
+        width: 80vw;
+        height: 50vh;
+        background-color: #f7f7f7;
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform: translate(-50%,-50%);
+        border-radius: 10px;
+        padding: 20px;
+    }
+    
+    .new-password>.popup-header{
+        font-size: 20px;
+        font-weight: 600;
+        text-align: right;
+        cursor: pointer;
+        position: relative;
+    }
+
+    .new-password>.popup-header>.body-header{
+        font-size: 20px;
+    }
+    .new-password>.popup-header>.body-close{
+        font-size: 20px;
+    }
 }
 
 @media all and (min-width:450px) and (max-width:850px){
@@ -793,6 +994,71 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    .settings-box{
+        width:80%;
+        padding: 20px;
+    }
+
+    .body-header{
+        text-align: center;
+        font-size: 28px;
+    }
+
+    .body-ele>input{
+        width:50%;
+    }
+
+    .body-ele>select{
+        width:30%;
+    }
+
+    .body-close{
+        font-size: 28px;;
+    }
+
+    .button-container{
+        width:60%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .popup-btn{
+        padding: 10px;
+        font-size: 14px;
+        background: none;
+        border: 2px solid black;
+        cursor: pointer;
+        border-radius: 5px;
+        transition: 0.2s ease-in-out;
+    }
+
+    .password-box{
+        width: 60vw;
+        height: 45vh;
+        background-color: #f7f7f7;
+        position: absolute;
+        top:50%;
+        left:50%;
+        transform: translate(-50%,-50%);
+        border-radius: 10px;
+        padding: 20px;
+    }
+    
+    .new-password>.popup-header{
+        font-size: 20px;
+        font-weight: 600;
+        text-align: right;
+        cursor: pointer;
+        position: relative;
+    }
+
+    .new-password>.popup-header>.body-header{
+        font-size: 22px;
+    }
+    .new-password>.popup-header>.body-close{
+        font-size: 22px;
     }
 
 }
